--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -52,6 +52,16 @@
     --foreground: #ededed;
   }
 }
+
+.custom-scroll::-webkit-scrollbar {
+  display: none;
+}
+
+.custom-scroll {
+  scrollbar-width: none; 
+  -ms-overflow-style: none;
+}
+
 .text-p-lg {
   font-size: 1rem;
   line-height: 150%;
